[gd_scene load_steps=21 format=3 uid="uid://dhe6lj8x5nk7d"]

[ext_resource type="Script" path="res://online_menu.gd" id="1_wibys"]
[ext_resource type="PackedScene" uid="uid://dn8baxe5jwlvy" path="res://Scenes/menu_scenes/go_back_btn.tscn" id="2_1hqwr"]
[ext_resource type="PackedScene" uid="uid://mdyttijryjf1" path="res://Scenes/menu_scenes/scroll_container.tscn" id="2_561r3"]
[ext_resource type="Script" path="res://Scenes/menu_scenes/lobby_menu.gd" id="3_hbw2o"]
[ext_resource type="Script" path="res://Scenes/menu_scenes/lobby_creator.gd" id="4_3ldkt"]
[ext_resource type="Script" path="res://Scenes/menu_scenes/v_box_menu.gd" id="4_6a1dq"]
[ext_resource type="Texture2D" uid="uid://3taes8esvydg" path="res://icon.svg" id="4_v2qc8"]
[ext_resource type="Script" path="res://Scenes/menu_scenes/input_field_option.gd" id="5_jqadj"]
[ext_resource type="PackedScene" uid="uid://k1lv633wv3h4" path="res://Scenes/menu_scenes/options/lobby_option.tscn" id="6_38mf0"]
[ext_resource type="Script" path="res://Scenes/menu_scenes/my_lobby.gd" id="7_8vq33"]
[ext_resource type="Texture2D" uid="uid://y4s6tfdcy6cq" path="res://Assets/UI/Menus/Pointer.png" id="9_fgoy1"]
[ext_resource type="Shader" path="res://Scenes/menu_scenes/scroll.gdshader" id="11_fj6tj"]
[ext_resource type="Texture2D" uid="uid://bxoq6x374yllu" path="res://Assets/UI/Menus/selectionscreen(1).png" id="12_7nucy"]

[sub_resource type="Gradient" id="Gradient_fwpbm"]
colors = PackedColorArray(1, 0.458824, 0.627451, 1, 1, 0.588235, 0.701961, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lygcx"]
gradient = SubResource("Gradient_fwpbm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbkfl"]
texture = SubResource("GradientTexture1D_lygcx")

[sub_resource type="Gradient" id="Gradient_0y7gk"]
offsets = PackedFloat32Array(0.0203046, 1)
colors = PackedColorArray(1, 0.588235, 0.701961, 1, 1, 0.458824, 0.627451, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ex3ec"]
gradient = SubResource("Gradient_0y7gk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qi6ro"]
texture = SubResource("GradientTexture1D_ex3ec")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdoj3"]
shader = ExtResource("11_fj6tj")

[node name="OnlineMenu" type="Node2D"]
script = ExtResource("1_wibys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="goBack" parent="CanvasLayer" instance=ExtResource("2_1hqwr")]

[node name="OnlineButton" type="CheckButton" parent="CanvasLayer"]
visible = false
offset_left = 818.0
offset_top = 271.0
offset_right = 924.0
offset_bottom = 313.0
scale = Vector2(2.52, 2.52)
theme_override_font_sizes/font_size = 18
text = "Online"

[node name="LobbySelection" parent="CanvasLayer" instance=ExtResource("2_561r3")]
visible = false
position = Vector2(2165, 993)

[node name="cursor" parent="CanvasLayer/LobbySelection" index="0"]
texture = ExtResource("9_fgoy1")

[node name="P1_control_selection" parent="CanvasLayer/LobbySelection" index="1" node_paths=PackedStringArray("lobby_selection", "connect")]
_is_active = true
lobby_selection = NodePath("..")
connect = NodePath("../../connect_menu")

[node name="ControlerMenu1" parent="CanvasLayer/LobbySelection/P1_control_selection" index="0"]
script = ExtResource("3_hbw2o")

[node name="ColorRect" parent="CanvasLayer/LobbySelection/P1_control_selection/ControlerMenu1" index="0" instance=ExtResource("6_38mf0")]
layout_mode = 2

[node name="password_edit" type="TextEdit" parent="CanvasLayer/LobbySelection"]
offset_left = -1405.0
offset_top = -700.0
offset_right = -1019.0
offset_bottom = -652.0
theme_override_font_sizes/font_size = 25
placeholder_text = "              Type Password"

[node name="cursor" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(165, 299)
texture = ExtResource("4_v2qc8")

[node name="LobbyCreator" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(34, -488)
scale = Vector2(1.88, 1.88)
script = ExtResource("4_3ldkt")

[node name="LobbyName" type="TextEdit" parent="CanvasLayer/LobbyCreator"]
offset_left = 75.0
offset_top = 422.0
offset_right = 679.0
offset_bottom = 478.0
theme_override_font_sizes/font_size = 30
placeholder_text = "                     Type Lobby name"
script = ExtResource("5_jqadj")

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/LobbyCreator"]
offset_left = 690.0
offset_top = 406.0
offset_right = 795.0
offset_bottom = 445.0
scale = Vector2(2.12, 2.12)
text = "Private"

[node name="Button" type="Button" parent="CanvasLayer/LobbyCreator"]
offset_left = 75.0
offset_top = 519.0
offset_right = 457.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 28
text = "Create Lobby"

[node name="LobbyPassword" type="TextEdit" parent="CanvasLayer/LobbyCreator"]
offset_left = 483.0
offset_top = 519.0
offset_right = 908.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 30
placeholder_text = "              Type password"
script = ExtResource("5_jqadj")

[node name="my_lobby" type="Node2D" parent="CanvasLayer"]
visible = false
script = ExtResource("7_8vq33")

[node name="Label" type="Label" parent="CanvasLayer/my_lobby"]
offset_right = 1922.0
offset_bottom = 166.0
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 90
text = "My super lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/my_lobby"]
offset_top = 272.0
offset_right = 1922.0
offset_bottom = 438.0
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 60
text = "waiting for oponent..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="connect_menu" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/connect_menu"]
position = Vector2(117, 317)
texture = ExtResource("9_fgoy1")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/connect_menu"]
offset_left = 199.0
offset_top = 267.0
offset_right = 901.0
offset_bottom = 472.0
scale = Vector2(2.2, 2.2)
theme_override_constants/separation = 50
script = ExtResource("4_6a1dq")

[node name="host_button" type="Button" parent="CanvasLayer/connect_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_tbkfl")
text = "Host"

[node name="join_button" type="Button" parent="CanvasLayer/connect_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_qi6ro")
text = "Join"

[node name="TextureRect4" type="TextureRect" parent="."]
z_index = -9
texture_repeat = 2
material = SubResource("ShaderMaterial_qdoj3")
offset_left = -73.0
offset_top = -50.0
offset_right = 1847.0
offset_bottom = 1030.0
scale = Vector2(1.08867, 1.09458)
texture = ExtResource("12_7nucy")

[connection signal="pressed" from="CanvasLayer/goBack/go_back" to="CanvasLayer/LobbySelection/P1_control_selection" method="_on_go_back_pressed"]
[connection signal="pressed" from="CanvasLayer/goBack/go_back" to="CanvasLayer/LobbyCreator" method="_on_go_back_pressed"]
[connection signal="pressed" from="CanvasLayer/goBack/go_back" to="CanvasLayer/my_lobby" method="_on_go_back_pressed"]
[connection signal="button_down" from="CanvasLayer/OnlineButton" to="." method="_on_online_button_button_down"]
[connection signal="button_down" from="CanvasLayer/LobbyCreator/Button" to="CanvasLayer/LobbyCreator" method="_on_button_button_down"]
[connection signal="button_down" from="CanvasLayer/connect_menu/VBoxContainer/host_button" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="CanvasLayer/connect_menu/VBoxContainer/join_button" to="." method="_on_join_button_button_down"]

[editable path="CanvasLayer/goBack"]
[editable path="CanvasLayer/LobbySelection"]
